--- a/site/products.html
+++ b/site/products.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-<head>
+  <head>
   <meta charset="utf-8">
   <title>Broken Hill Surf Shop Online</title>
   <link rel="shortcut icon" href="../assets/images/favicon.ico" />
@@ -17,78 +16,68 @@
       loadproduct(parameters[0]);
     }
   </script>
-</head>
+  </head>
 
-<body onLoad="replace();">
-  <!-- -->
-  <!--Header (Logo) and Navigation Bar-->
-  <div id="pheader">
-    <header class="header">
-      <div class="headergradient">
-        <a href="home.html">
-          <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" />
-        </a>
-        <!--START Navigation Bar-->
-        <div id="navigation-bar">
-          <ul>
-            <li><a href="home.html">Home</a> 
-            </li>
-            <li class="active"><a href="products.html">Products</a> 
-            </li>
-            <li><a href="about.html">About</a> 
-            </li>
-            <li><a href="contact.html">Contact</a> 
-            </li>
-            <li class="last"><a href="news.html">News</a> 
-            </li>
-          </ul>
-        </div>
-      </div>
-      <!--END Navigation Bar-->
-      <!--START Product Navigation Bar-->
-      <div id="product-navigation-bar">
-        <ul>
-          <li id="product_category_surfing"><a href="">Surfing</a>
-          </li>
-          <li id="product_category_clothing"><a href="">Clothing</a>
-          </li>
-          <li id="product_category_protection"><a href="">Protection</a>
-          </li>
-          <li id="product_category_scubasnorkeling_gear"><a href="">Scuba/Snorkeling Gear</a>
-          </li>
-          <li id="product_category_recreation"><a href="">Recreation</a>
-          </li>
-          <li id="product_category_accessory" class="last"><a href="">Accessories</a>
-          </li>
-        </ul>
-      </div>
-      <!--END Product Navigation Bar-->
-    </header>
-  </div>
-  <div id="pcontent">
-    <div id="product_location">Home > Products > Category > <u><b>PRODUCT</b></u> 
-    </div>
-    <div id="products">
-      <div class="productimage">
-        <img id="productimage" src="../assets/images/placeholders/290x582.png" alt="Product Image">
-      </div>
-      <div class="producttext">
-        <div class="productinfo_upper">
-          <!--Wrapper -->
-          <div id="productname">Product Name</div>
-          <div>Price: <span id="productdatabaseinfo_price">$$$</span> 
-            <br>Stock: <span id="productdatabaseinfo_stock">Stock Amount</span> 
+  <body onLoad="replace();">
+  <div id="container"> 
+    <!-- --> 
+    <!--Header (Logo) and Navigation Bar-->
+    <div id="pheader">
+      <header class="header">
+        <div class="headergradient"> <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> 
+          <!--START Navigation Bar-->
+          <div id="navigation-bar">
+            <ul>
+              <li><a href="home.html">Home</a> </li>
+              <li class="active"><a href="products.html">Products</a> </li>
+              <li><a href="about.html">About</a> </li>
+              <li><a href="contact.html">Contact</a> </li>
+              <li class="last"><a href="news.html">News</a> </li>
+            </ul>
           </div>
         </div>
-        <div id="productdescription">Product Description</div>
+        <!--END Navigation Bar--> 
+        <!--START Product Navigation Bar-->
+        <div id="product-navigation-bar">
+          <ul>
+            <li id="product_category_surfing"><a href="">Surfing</a> </li>
+            <li id="product_category_clothing"><a href="">Clothing</a> </li>
+            <li id="product_category_protection"><a href="">Protection</a> </li>
+            <li id="product_category_scubasnorkeling_gear"><a href="">Scuba/Snorkeling Gear</a> </li>
+            <li id="product_category_recreation"><a href="">Recreation</a> </li>
+            <li id="product_category_accessory" class="last"><a href="">Accessories</a> </li>
+          </ul>
+        </div>
+        <!--END Product Navigation Bar--> 
+      </header>
+    </div>
+    <div id="pcontent">
+      <div id="product_location">Home > Products > Category > <u><b>PRODUCT</b></u> </div>
+      <div id="products">
+        <div class="productimage"> <img id="productimage" src="../assets/images/placeholders/290x582.png" alt="Product Image"> </div>
+        <div class="producttext">
+          <div class="productinfo_upper"> 
+            <!--Wrapper -->
+            <div id="productname">Product Name</div>
+            <div>Price: <span id="productdatabaseinfo_price">$$$</span> <br>
+              Stock: <span id="productdatabaseinfo_stock">Stock Amount</span> </div>
+          </div>
+          <div id="productdescription">Product Description</div>
+        </div>
+      </div>
+    </div>
+    <div id="footer_wrapper">
+      <div id="footer"> 
+        <!--SITEMAP-->
+        <div id="infocolumns">
+          <div class="column">column 1</div>
+          <div class="column">column 2</div>
+          <div class="column">column 3</div>
+        </div>
+        <br>
+        <footer>© 2014 Andrew Wong & Ryan Oo</footer>
       </div>
     </div>
   </div>
-  <div id="footer">
-    <!--SITEMAP-->
-    <div></div>
-    <footer>© 2014 Andrew Wong & Ryan Oo</footer>
-  </div>
 </body>
-
 </html>
