--- a/site/products.html
+++ b/site/products.html
@@ -70,11 +70,23 @@
       <div id="footer"> 
         <!--SITEMAP-->
         <div id="infocolumns">
-          <div class="column">column 1</div>
-          <div class="column">column 2</div>
-          <div class="column">column 3</div>
+          <div class="column">
+            <h1>site</h1>
+            <p>new</p>
+          </div>
+          <div class="column">
+            <h1>about</h1>
+            <p>new</p>
+          </div>
+          <div class="column">
+            <h1>contact</h1>
+            <ul>
+              <li>email: contact@brokenhillsurf.com.au</li>
+              <li>facebook: brokenhillsurfshop</li>
+              <li>twitter: @brokenhillsurfshop</li>
+            </ul>
+          </div>
         </div>
-        <br>
         <footer>© 2014 Andrew Wong & Ryan Oo</footer>
       </div>
     </div>
