--- a/site/products.html
+++ b/site/products.html
@@ -6,6 +6,7 @@
   <link rel="shortcut icon" href="../assets/images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
   <script src="../assets/js/main.js"></script>
+  <script src="../assets/js/jquery.barcode.min.js"></script>
   <script>
     var hasargs;
 	var productvalid = false;
@@ -62,7 +63,10 @@
             <div>Price: <span id="productdatabaseinfo_price">$$$</span> <br>
               Stock: <span id="productdatabaseinfo_stock">Stock Amount</span> </div>
           </div>
-          <div id="productdescription">Product Description</div>
+          <div class="productinfo_lower">
+            <div id="productdescription">Product Description</div>
+            <div id="productbarcode"></div>
+          </div>
         </div>
       </div>
     </div>
