--- a/site/products.html
+++ b/site/products.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="../assets/images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
   <script src="../assets/js/main.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
   <script src="../assets/js/jquery.barcode.min.js"></script>
   <script>
     var hasargs;
@@ -20,7 +20,7 @@
   </script>
   </head>
 
-  <body onLoad="replace();$("#productbarcode").barcode(parameters[0], "code128");">
+  <body onLoad="replace();">
   <div id="container"> 
     <!-- --> 
     <!--Header (Logo) and Navigation Bar-->
