--- a/site/products.html
+++ b/site/products.html
@@ -66,7 +66,9 @@
           </div>
           <div class="productinfo_lower">
             <div id="productdescription">Product Description</div>
-            <div id="productbarcode"></div>
+            <div id="productbarcode_wrapper">
+              <div id="productbarcode"></div>
+            </div>
           </div>
         </div>
       </div>
