--- a/site/products.html
+++ b/site/products.html
@@ -67,7 +67,7 @@
           <div class="productinfo_lower">
             <div id="productdescription">Product Description</div>
             <div id="productbarcode_wrapper">
-              <div id"productbarcode_wrapper_subwrapper">
+              <div id="productbarcode_wrapper_subwrapper">
                 <div id="productbarcode"></div>
               </div>
             </div>
