--- a/site/checkout.html
+++ b/site/checkout.html
@@ -63,7 +63,7 @@
                 <p><span id="card_security_code">Security Code</span><input type="text" name="card_security_code" disabled></p> <!-- Credit card security code -->
               </div> <!-- Close creditcard only -->
               <div id="radio_paypal"> <!-- Only shown if paypal is selected -->
-                <p style='text-align: center' class='nomargin'>PayPal selected at the payment method. Press Next to continue the purchase.</p> <!-- ... -->
+                <p style='text-align: center' class='nomargin'>PayPal selected as the payment method. Press Next to continue the purchase.</p> <!-- ... -->
                 <img src='../assets/images/paypal.png' alt='Secured by PayPal'/> <!-- PayPal image -->
               </div> <!-- Close paypal only -->
             </fieldset> <!-- Close payment details -->
